fix chat panel dropdown menu z-index

--- a/public/less/chat/ChatPanel.less
+++ b/public/less/chat/ChatPanel.less
@@ -1,7 +1,6 @@
 @import './../variables.less';
 
 .chat-panel {
-  //position: absolute;
   bottom: 0px;
   margin-right: 20px;
   box-shadow: 0px 0px 10px #aaa;
@@ -11,7 +10,7 @@
   float: left;
   width: 300px;
   height: 320px;
-  z-index: 2;
+  //z-index: 2;
 
   .chat-panel-background-wrapper {
     //height: 68px;
